fix - overflow

--- a/src/components/Board/styles.css
+++ b/src/components/Board/styles.css
@@ -4,4 +4,5 @@
 		max-width: 600px;
     background-color: rgb(187, 173, 160);
     padding: 5px;
+    overflow: hidden;
 }
